# landing_zone_detection

./: CMakeLists.txt  LICENSE  README.md  package.xml  params.yaml
config/: params.yaml
launch/: landing_zone_launch.launch
msg/: LandingZone.msg
src/: landing_zone_detector.cpp
